<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minesweeper</string>
    <string name="play">Play</string>
    <string name="classic">Classic</string>
    <string name="modern">Modern</string>
    <string name="time">Time:</string>
    <string name="mines">Mines:</string>
    <string name="easy">Easy (9*9)</string>
    <string name="medium">Medium (16*16)</string>
    <string name="hard">Hard (30*16)</string>
    <string name="end_game_warning">Are you sure you want to end this game?</string>
    <string name="you_won">You won!</string>
    <string name="you_won_in">You won in</string>
    <string name="you_lost">You lost!</string>
    <string name="you_tried_for">You tried for</string>
    <string name="seconds">seconds.</string>
    <string name="settings">Settings</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="spooky">Spooky</string>
    <string name="pref_header_game">Game</string>
    <string name="pref_header_display">Display</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="pref_title_vibration">Vibration</string>
    <string name="pref_title_night_mode">Night mode</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_description_vibration">Vibration is enabled</string>
    <string name="pref_description_night_mode">Night mode is off</string>
    <string-array name="pref_language_list_titles">
        <item>English</item>
        <item>Hebrew/עִבְרִית</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>en</item>
        <item>iw</item>
    </string-array>

    <string name="prev_sign" translatable="false"><![CDATA[<]]></string>
    <string name="next_sign" translatable="false"><![CDATA[>]]></string>
    <string name="zero" translatable="false">000</string>
    <string name="mines_count" translatable="false">00%1$d</string>
    <string name="larger_mines_count" translatable="false">0%1$d</string>
    <string name="difficulty_pref_key" translatable="false">difficulty_pref</string>
    <string name="theme_pref_key" translatable="false">theme_pref</string>
    <string name="night_mode_pref_key" translatable="false">night_mode_pref</string>
    <string name="vibration_pref_key" translatable="false">vibration_pref</string>
    <string name="language_pref_key" translatable="false">language_pref</string>
    <string name="language_code" translatable="false">en</string>
    <string name="adMob_app_id" translatable="false">ca-app-pub-1362373783891124~3588781059</string>
    <string name="adMob_main_banner_ad_unit_id" translatable="false">ca-app-pub-1362373783891124/6079213026</string>
    <string name="sociallix_app_play_store_url" translatable="false">https://play.google.com/store/apps/details?id=com.sociallix.android</string>
    <string name="banner_ad" translatable="false">Banner ad</string>
</resources>