<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_display">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/night_mode_pref_key"
            android:summary="@string/pref_description_night_mode"
            android:title="@string/pref_title_night_mode" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_game">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/vibration_pref_key"
        android:summary="@string/pref_description_vibration"
        android:title="@string/pref_title_vibration" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_ui">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_language_list_titles"
        android:entryValues="@array/pref_language_list_values"
        android:key="@string/language_pref_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_language" />

    </PreferenceCategory>

</PreferenceScreen>
